welcome.lessons.welcome.bat.bool2.MaxMod5.scala.error
maxMod5:4: error: not found: value minInt
		if (a%5==b%5) x=minInt(a,b)
                                ^maxMod5:5: error: not found: value maxInt
		else x=maxInt(a,b)
                       ^